*SVN*

* Fixed query parser to deal gracefully with equal signs inside keys and values #1345 [gorou]. 
  Example: /?sig=abcdef=:foobar=&x=y will pass now. 

* Added Cuba to country list #1351 [todd]

* Fixed radio_button to work with numeric values #1352 [demetrius]

* Added :extension option to NumberHelper#number_to_phone #1361 [delynnb]

* Added button_to as a form-based solution to deal with harmful actions that should be hidden behind POSTs. This makes it just as easy as link_to to create a safe trigger for actions like destroy, although it's limited by being a block element, the fixed look, and a no-no inside other forms. #1371 [tom@moertel.com]

* Fixed image_tag so an exception is not thrown just because the image is missing and alt value can't be generated #1395 [Marcel]

* Added a third parameter to TextHelper#auto_link called href_options for specifying additional tag options on the links generated #1401 [tyler.kovacs@gmail.com]. Example: auto_link(text, :all, { :target => "_blank" }) to have all the generated links open in a new window.

* Fixed TextHelper#highlight to return the text, not nil, if the phrase is blank #1409 [patrick@lenz.sh]

* Fixed TagHelper such that :name and 'name' keys in the options doesn't result in two attributes #1455 [take_tk]

* Ensure that helpers are only available to the controllers where they are defined and their subclasses.  #1394 [kdole@tamu.edu]

* render("foo/bar") works with a layout again 

* Fixed double-singularization on scaffolded pagination call (Address would be turned into Addres) #1216, #1404 [nilsga]

* Removed the require hack used by functional testing to work around an earlier bug in rake.

* Allow distance_of_time_in_words to work with any value that responds to #to_time (like dates) #969

* Support :render option for :verify #1440 [TobiasLuetke]

* Updated vendor copy of html-scanner lib to 0.5.1, for bug fixes and optimizations
