@@ -13,14 +13,19 @@ module ActionView
     module DateHelper
       DEFAULT_PREFIX = "date" unless const_defined?("DEFAULT_PREFIX")
 
-      # Reports the approximate distance in time between to Time objects. For example, if the distance is 47 minutes, it'll return
+      # Reports the approximate distance in time between to Time objects or integers. 
+      # For example, if the distance is 47 minutes, it'll return
       # "about 1 hour". See the source for the complete wording list.
-      #Set <tt>include_seconds</tt> to true if you want more detailed approximations if distance < 1 minute
-      def distance_of_time_in_words(from_time, to_time, include_seconds = false)
-        from_time = from_time.to_time
-        to_time = to_time.to_time
-        distance_in_minutes = ((to_time - from_time) / 60).round.abs
-        distance_in_seconds = ((to_time - from_time)).round.abs
+      #
+      # Integers are interpreted as seconds. So,
+      # <tt>distance_of_time_in_words(50)</tt> returns "less than a minute".
+      #
+      # Set <tt>include_seconds</tt> to true if you want more detailed approximations if distance < 1 minute
+      def distance_of_time_in_words(from_time, to_time = 0, include_seconds = false)
+        from_time = from_time.to_time if from_time.respond_to?(:to_time)
+        to_time = to_time.to_time if to_time.respond_to?(:to_time)
+        distance_in_minutes = (((to_time - from_time).abs)/60).round
+        distance_in_seconds = ((to_time - from_time).abs).round
 
         case distance_in_minutes
           when 0..1
